Site atualizado com duas tabelas, uma para recomendados e uma para vistos, e resenhas nos filmes 1 dos vistos e 1 dos recomendados.

--- a/fnaf.html
+++ b/fnaf.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <div id="menu">
-                <img style="height: 100px; width: 150px;  margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt="">
+                <a href="index.html"><img style="height: 100px; width: 150px;  margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt=""></a>
 
                 <h4><a style="margin-right: 40px;" href="https://www.imdb.com/pt/" target="_blank">IMDB</a></h4>
 
@@ -44,6 +44,11 @@
         </table>
 
         <button><h2><a href="ingresso.html">Comprar ingressos para amanhã</a></h2></button>
+
+
+        <footer>
+            &copy; Todos os direitos reservados &reg;        
+        </footer>
         
 
     </main>    
