--- a/ingresso.html
+++ b/ingresso.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <div id="menu">
-                <img style="height: 100px; width: 150px; margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt="">
+                <a href="index.html"><img style="height: 100px; width: 150px;  margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt=""></a>
 
                 <h4><a style="margin-right: 40px;" href="https://www.imdb.com/pt/" target="_blank">IMDB</a></h4>
 
@@ -25,6 +25,10 @@
         </header>
 
         <p><h1>Parabéns! Você comprou os ingressos para o dia de amanhã</h1></p>
+
+        <footer>
+            &copy; Todos os direitos reservados &reg;        
+        </footer>
     
 </body>
 </html>
