--- a/meia-entrada.html
+++ b/meia-entrada.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <div id="menu">
-                <img style="height: 100px; width: 150px; margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt="">
+                <a href="index.html"><img style="height: 100px; width: 150px;  margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt=""></a>
 
                 <h4><a style="margin-right: 40px;" href="https://www.imdb.com/pt/" target="_blank">IMDB</a></h4>
 
@@ -25,7 +25,7 @@
             <h1>Como Funciona a Meia-Entrada no Cinema Germinareflix</h1>
         </header>
 
-        <p><h3>No cinema Germinareflix, o sistema de meia-entrada funciona de forma simples e transparente, com o objetivo de garantir o acesso à cultura e ao entretenimento para todos. O valor padrão do ingresso é de R$ 40,00. No entanto, quem tem direito à meia-entrada paga apenas R$ 20,00, ou seja, 50% do valor total.
+        <p><h3 style="text-align: justify; padding: 50px;">No cinema Germinareflix, o sistema de meia-entrada funciona de forma simples e transparente, com o objetivo de garantir o acesso à cultura e ao entretenimento para todos. O valor padrão do ingresso é de R$ 40,00. No entanto, quem tem direito à meia-entrada paga apenas R$ 20,00, ou seja, 50% do valor total.
 
             Esse benefício é concedido conforme a legislação vigente e é destinado a públicos específicos, como estudantes com carteira de identificação estudantil válida (CIE), idosos com 60 anos ou mais, pessoas com deficiência (e, em alguns casos, seus acompanhantes) e jovens de baixa renda com ID Jovem.
             
@@ -35,6 +35,10 @@
             
             Com preços justos e políticas inclusivas, o cinema Germinareflix reforça seu compromisso de tornar a experiência cinematográfica acessível e agradável para todos os públicos.
         </h3></p>
+
+        <footer>
+            &copy; Todos os direitos reservados &reg;        
+        </footer>
     </main>
 </body>
 </html>
