--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <div id="menu">
+            <div id="menu"> ç
                 <a href="index.html"><img style="height: 100px; width: 150px;  margin-right: 730px;" src="ChatGPT Image 6 de mai. de 2025, 14_25_36.png" alt=""></a>
 
                 <h4><a style="margin-right: 40px;" href="https://www.imdb.com/pt/" target="_blank">IMDB</a></h4>
